[package]
name = "rust_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
webhook = { path = "./webhook" }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
dirs = "4"
sysinfo = "0.30.12"
serde_json = "1.0.117"
tokio="1.28.0"
rdev = "0.5.0"
clap = { version = "4.5.6", features = ["derive"] }
shlex = "1.3.0"
